@@ -57,9 +57,14 @@ static omx_error_handler_t omx__error_handler = (omx_error_handler_t) omx__error
 void
 omx__init_error_handler(void)
 {
-  omx__error_handler = omx__globals.fatal_errors ?
-			(omx_error_handler_t) omx__errors_are_fatal
-			: (omx_error_handler_t) omx__errors_return;
+  if (omx__error_handler == (omx_error_handler_t) omx__errors_before_init) {
+    /* if the handler has not been modified by the application in the meantime,
+     * set the default handler
+     */
+    omx__error_handler = omx__globals.fatal_errors ?
+			 (omx_error_handler_t) omx__errors_are_fatal
+			 : (omx_error_handler_t) omx__errors_return;
+  }
 }
 
 /***********************************************************
