@@ -1,6 +1,9 @@
 Open-MX 1.3.3
 ======================================
 
+Bug fixes:
+* Make omx_set_error_handler() work before omx_init().
+
 
 Caveats:
 * No background progression or retransmission is done if the application
